fix pocket.widget cut off on mobile

--- a/assets/strapdown/themes/common.css
+++ b/assets/strapdown/themes/common.css
@@ -128,6 +128,8 @@ ul.dropdown-menu
 	#pocket_widget {
 		float: none;
 		margin-left: 0;
+		margin-bottom: 0;
+		height: 304px !important;
 	}
 }
 
